2008-10-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/largeobject.cxx, src/pipeline.cxx, src/prepared_statement.cxx,
 src/result.cxx, src/util.cxx:
  - Fixed gcc 4.3 warnings (I hope), thanks Eugene V. Lyubimkin
2008-09-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/Makefile.am.template, test/runner.cxx, test/test/helpers.hxx,
 test/test_main.hxx, test/unit/runner.cxx:
  - Moved test runners' main() into a header of its own; not a macro anymore
  - Test runners check for failure
2008-09-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Fixed compile warning on poll(), thanks Eugene V. Lyubimkin
2008-09-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sampledata/*:
  - Moved all sample headers into "pqxx" subdirectories
  - No longer need to copy headers, thanks Kirit Saelensminde
 include/pqxx/util.hxx:
  - Simplified default_null, eliminated warning; thanks Kirit Saelensminde
 src/connection_base.cxx:
  - Suppressed stupid Visual C++ warnings, thanks Kirit Saelensminde
2008-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, src/result.cxx:
  - PL/pgSQL exceptions, thanks Michal Jankowsk
2008-08-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test085.cxx,
 test/unit/test_prepared_statement.cxx:
  - Re-branded test085 as a unit test
 include/pqxx/transaction_base.hxx, sr/transaction_base.cxx:
  - New function activate() for explicit bracketing
  - Activate before executing prepared statement, thanks qelo
2008-08-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-public.hxx:
  - Apply PQXX_AUTOLINK to static link as well, thanks Kirit
2008-08-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Export encrypt_password, thanks boto
2008-08-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
  - Fixed nested template syntax, thanks Bjorn Munch
2008-08-19  Jeroen T. Vermeulen <jtv@xs4all.nl>