@@ -1,3 +1,4 @@
+#define PQXX_HAVE_PQCANCEL 1
 #define PQXX_HAVE_PQESCAPEBYTEA 1
 #define PQXX_HAVE_PQESCAPESTRING 1
 #define PQXX_HAVE_PQEXECPREPARED 1
