@@ -25,6 +25,7 @@ PQXX_HAVE_NAN	internal	compiler
 PQXX_HAVE_C_NAN	internal	compiler
 PQXX_HAVE_GCC_VISIBILITY	internal	compiler
 PQXX_HAVE_POLL	internal	compiler
+PQXX_HAVE_PQCANCEL	internal	libpq
 PQXX_HAVE_PQDESCRIBEPORTAL	internal	libpq
 PQXX_HAVE_PQESCAPEBYTEA	internal	libpq
 PQXX_HAVE_PQESCAPEBYTEACONN	internal	libpq
